# moonfire-nvr

server/: Cargo.toml
server/base/: Cargo.toml
server/db/: Cargo.toml
server/db/upgrade/: mod.rs  v1_to_v2.rs  v5_to_v6.rs
server/mp4/src/: lib.rs  track.rs
server/mp4/src/mp4box/: avc1.rs  elst.rs  mod.rs
ui/: package-lock.json  package.json
