[package]
name = "moonfire-nvr"
version = "0.7.5"
authors = ["Scott Lamb <slamb@slamb.org>"]
edition = "2018"
resolver = "2"
license-file = "../LICENSE.txt"
rust-version = "1.60"
repository = "https://github.com/katyo/moonfire-nvr"

[features]

# The nightly feature is used within moonfire-nvr itself to gate the
# benchmarks. Also pass it along to crates that can benefit from it.
nightly = ["db/nightly", "parking_lot/nightly"]

# The bundled feature includes bundled (aka statically linked) versions of
# native libraries where possible.
bundled = ["rusqlite/bundled"]

[workspace]
members = ["base", "db", "mylog", "mp4"]

[dependencies]
base = { package = "moonfire-base", path = "base" }
base64 = "0.13"
blake3 = "1"
bytes = "1"
byteorder = "1"
clap = { version = "2", default-features = false, features = ["color", "wrap_help"] }
cursive = "0.19"
db = { package = "moonfire-db", path = "db" }
failure = "0.1"
futures = "0.3"
fnv = "1"
h264-reader = "0.6"
http = "0.2"
http-serve = { version = "0.3", features = ["dir"] }
hyper = { version = "0.14", features = ["http1", "server", "stream", "tcp"] }
lazy_static = "1"
libc = "0.2"
log = { version = "0.4" }
memchr = "2"
mylog = { path = "mylog" }
nix = "0.25"
nom = "7"
parking_lot = "0.12"
password-hash = "0.4"
protobuf = "3"
reffers = "0.7"
retina = "0.4"
ring = "0.16"
rusqlite = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smallvec = { version = "1", features = ["union"] }
structopt = { version = "0.3", default-features = false }
sync_wrapper = "0.1"
time = "0.1"
tokio = { version = "1", features = ["macros", "parking_lot", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = "0.1"
tokio-tungstenite = "0.17"
toml = "0.5"
tracing = { version = "0.1", features = ["log"] }
url = "2"
uuid = { version = "1", features = ["serde", "std", "v4"] }

[dev-dependencies]
mp4 = { path = "mp4" }
num-rational = { version = "0.4", default-features = false, features = ["std"] }
reqwest = { version = "0.11", default-features = false, features = ["json"] }
tempfile = "3"

[profile.dev.package.scrypt]
# On an Intel i3-6100U @ 2.30 GHz, a single scrypt password hash takes 7.6
# seconds at opt-level=0, or 0.096 seconds at opt-level=2. Always optimize this
# crate to avoid seeming hung / being annoyingly slow when debugging.
opt-level = 2

[profile.release]
opt-level = 3
debug = true
strip = false
debug-assertions = false
overflow-checks = false
lto = true
incremental = false
codegen-units = 1
rpath = false

[profile.bench]
debug = 1
