[package]
name = "moonfire-db"
version = "0.7.5"
authors = ["Scott Lamb <slamb@slamb.org>"]
readme = "../README.md"
edition = "2018"
license-file = "../../LICENSE.txt"

[features]
nightly = []

[lib]
path = "lib.rs"

[dependencies]
base = { package = "moonfire-base", path = "../base" }
base64 = "0.13"
blake3 = "1"
byteorder = "1"
cstr = "0.2"
diff = "0.1"
failure = "0.1"
fnv = "1"
futures = "0.3"
h264-reader = "0.6"
hashlink = "0.8"
lazy_static = "1"
libc = "0.2"
log = "0.4"
mylog = { path = "../mylog" }
nix = "0.25"
num-rational = { version = "0.4", default-features = false, features = ["std"] }
odds = { version = "0.4", features = ["std-vec"] }
parking_lot = "0.12"
pretty-hex = "0.3"
protobuf = "3"
ring = "0.16"
rusqlite = "0.28"
scrypt = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
#similar = "2.1.0"
smallvec = "1"
tempfile = "3"
time = "0.1"
tokio = { version = "1", features = ["macros", "parking_lot", "rt-multi-thread", "sync"] }
url = { version = "2", features = ["serde"] }
uuid = { version = "1", features = ["serde", "std", "v4"] }
itertools = "0.10"

[build-dependencies]
protobuf-codegen = "3"
